<!--
  ~ Created by Snooow on 2019/5/10
  -->

<resources>
    <string name="app_name">Snappat</string>
    <string name="dear_user">亲爱的用户</string>
    <string name="close_permisson_toast">您关闭权限申请,如需使用请重新点击.</string>
    <string name="close">关闭</string>
    <string name="i_am_title">标题</string>
    <string name="drop_two_to_home">再按一次返回键回到桌面</string>
    <string name="user_data">main_user_data</string>
    <string name="loading">加载中</string>
    <string name="creat">登录</string>
    <string name="read_agreement">使用条款</string>
    <string name="get_code">获取验证码</string>
    <string name="sms_password">验证码</string>
    <string name="inpue_sms_password">输入短信验证码</string>
    <string name="mobile_phone">手机号</string>
    <string name="input_phone">输入手机号</string>
    <string name="snappat_main">Snappat</string>
    <string name="snappat_main_min">社交新模式</string>
    <string name="url_error">请求链接不存在~</string>
    <string name="socket_time_out">请求超时,请稍后重试~</string>
    <string name="socket_exception">网络异常，请检查后重试~</string>
    <string name="error_parse">数据解析异常,请稍后重试.</string>
    <string name="phone_format">手机格式错误</string>
    <string name="phone_input">请输入手机号</string>
    <string name="code_send_success">验证码已发送,请注意查收~</string>
    <string name="input_pwd_toast">请输入密码~</string>
    <string name="two_pwd">您两次输入的密码不一致~</string>
    <string name="password_error">您的密码输入错误,请核对后再次输入~</string>
    <string name="input_all_message">请保证输入信息的完整~</string>

    <string name="home_text">主页</string>
    <string name="notify_text">通知</string>
    <string name="mine_text">我</string>
    <string name="no_more">没了~~~</string>


    <string name="friends_text">好友</string>
    <string name="latest_text">最新</string>
    <string name="hot_text">热榜</string>
    <string name="reward_text">悬赏</string>

    <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_error">打开摄像头错误</string>

    <string name="start_chatting">开始聊天</string>
    <string name="hint_message">hint_message</string>
    <string name="send">send</string>
  <string name="top_bar_bg">bar_background</string>
    <string name="main_page_scanner">main_page_scanner</string>
  <string name="puzzle_text">谜面</string>
    <string name="favorite_text">赞</string>
    <string name="solve_text">解谜</string>

    <string name="hint_text">提示: </string>
    <string name="key_words">解谜词: </string>
    <string name="key_words_res"></string>
    <string name="enter_hint_text">请输入提示语：</string>
    <string name="award_hint_text">奖励金额: </string>
    <string name="add_mystery_title">添加谜题</string>
    <string name="scan_mystery_title">扫描结果</string>
    <string name="award_value_hint_text">1~999</string>
    <string name="user_message">你想告诉解谜者什么？</string>
    <string name="btn_publish">发布</string>
  <string name="notification_title_text">Notification</string>
  <string name="rewards_text">奖励</string>
    <string name="return_page">返回</string>
  <string name="mine_en_text">Mine</string>
</resources>
