...
            android:text="@string/read_agreement"
            android:textColor="@color/gray_color"
            android:textSize="@dimen/dimens_12"/>
    </LinearLayout>

    <Button
        android:id="@+id/create_account"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_42"
        android:layout_marginLeft="@dimen/dimens_20"
        android:layout_marginRight="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_20"
...
